kubernetes/apps/mantle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mantle
  namespace: apps
  labels:
    app.kubernetes.io/name: mantle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mantle
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mantle
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /metrics
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mantle
          image: ghcr.io/dvflw/mantle:latest@sha256:dee440be68d324d6745c193408eefda265f13152d18107e849c1b1f700c41cff
          imagePullPolicy: IfNotPresent
          command:
            - mantle
            - serve
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /readyz
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
