kubernetes/apps/mantle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mantle
  namespace: apps
  labels:
    app.kubernetes.io/name: mantle
spec:
  selector:
    app.kubernetes.io/name: mantle
  ports:
    - name: http
      port: 8080
      targetPort: http
