kubernetes/apps/mantle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mantle
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mantle.home.mcnees.me`)
      kind: Rule
      services:
        - name: mantle
          port: 8080
  tls:
    secretName: legacy-home-wildcard-tls
